// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-media-siblings should get sibling media items 1`] = `
{
  "content": [
    {
      "text": "{"totalBefore":0,"totalAfter":1,"items":[{"mediaType":{"id":"00000000-0000-0000-0000-000000000000","icon":"icon-picture","collection":null},"variants":[{"name":"_Test Sibling 1","culture":null}],"noAccess":false,"isTrashed":false,"createDate":"NORMALIZED_DATE","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"flags":[],"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-siblings should handle non-existent target 1`] = `
{
  "content": [
    {
      "text": "Error using get-media-siblings:
{
  "message": "Request failed with status code 404",
  "response": ""
}",
      "type": "text",
    },
  ],
}
`;
